close to final commit